--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ PORT:			24675
 UNICORN_WORKERS:	4
 UNICORN_TIMEOUT:	300
 
-# These work for https://movierama.dev
-GITHUB_OAUTH_CLIENT_ID:	d4aad0f8c68fababee8a
-GITHUB_OAUTH_SECRET:	e7749d16251801499d9b7d7f376b7d8dbfe189b4
+# These work for https://movierama.dev:24676/
+GITHUB_OAUTH_CLIENT_ID:	810b0b9951e5630240d0
+GITHUB_OAUTH_SECRET:	4faaeeefd44e073adb55b71991b54a3c897d6d53
 
 NEW_RELIC_KEY:		none
