Added SendGrid environment variables to .env files

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ GITHUB_OAUTH_CLIENT_ID:	810b0b9951e5630240d0
 GITHUB_OAUTH_SECRET:	4faaeeefd44e073adb55b71991b54a3c897d6d53
 
 NEW_RELIC_KEY:		none
+
+SG_APIKEY: your-sg-api-key
